# FateSens

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/fatesens/: __init__.py  pl.py
src/fatesens/common_utils/: __init__.py  parallelism.py
src/fatesens/flow_map/: __init__.py  flow_map.py
src/fatesens/flow_map/fate_probability/: fate_probablility.py
src/fatesens/flow_map/tmap/: tmap.py
src/fatesens/jacobian_matrix/: __init__.py  _calculate_neighbor.py  estimate_jacobean.py
src/fatesens/preprocessing/: _preprocessing.py
src/fatesens/tools/: __init__.py  _utils.py  ridge.py
tutorial/: fate_boundary_estimation.ipynb  regulatory_gene_estimation.ipynb
